--- a/app/views/editorial/quesito_new.html.erb
+++ b/app/views/editorial/quesito_new.html.erb
@@ -14,8 +14,7 @@
 
                   <p>Come abbonato a Fiscosport hai diritto a questo importante servizio; scrivi una domanda alla nostra
                     redazione.<br/> Prenderemo spunto dal tuo quesito e ti risponderemo appena possibile attraverso uno
-                    o più articoli
-                    , che verranno pubblicati sul sito. Saranno accettati solo quesiti attinenti agli argomenti
+                    o più articoli che verranno pubblicati sul sito. Saranno accettati solo quesiti attinenti agli argomenti
                     fiscali/sportivi e di pubblico interesse.</p>
                 <h1><%= l(:label_news_new) %></h1>
 
