--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-EN" xmlns="http://www.w3.org/1999/html">
 <head><!-- Created by DomThu & SPecchiaSoft -->
    <meta charset="utf-8"/>
-  <title>FiscoSport (v0.1.1) <%= h html_title %></title>
+  <title>FiscoSport (v0.1.2 beta) <%= h html_title %></title>
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width"/>
   <meta name="description" content="<%= Redmine::Info.app_name %>"/>
   <meta name="keywords" content="editoriale, notizie sport, fiscale, info, fiscosport"/>
@@ -42,7 +42,7 @@
   <%= javascript_include_tag "src/jquery.color.js" %>
   <%= javascript_include_tag "src/jquery-glowing.js" %>
   <%= javascript_include_tag "src/text_ticker.js" %>
-  <%= javascript_include_tag "dynamic-font-resize.js" %>
+  <%= javascript_include_tag "application_fs.js" %>
   <%= javascript_include_tag "jquery/jquery-ui-1.9.2.custom.min.js" %>
   <%= stylesheet_link_tag 'jquery/start/jquery-ui-1.9.2.custom.min.css', :media => 'all' %>
   <%= stylesheet_link_tag 'jquery-ui-rewrite.css', :media => 'all' %>
